# Language

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  keywords.def  main  main.cpp  temp.dot  test.txt
back-end/: CMakeLists.txt  main.cpp
back-end/IR/include/: ASMGenerator.h  IRBasics.h  IRGenerator.h  codegen.h  debugUtils.h
back-end/IR/linkedList/: linkedList.h  linkedListAddons.h
back-end/IR/src/: ASMGenerator.cpp  IRBasics.cpp  IRGenerator.cpp  debugUtils.cpp
back-end/include/: asmTranslator.h  astDumpBack.h  core.h  treeReader.h
back-end/src/: asmTranslator.cpp  core.cpp  treeReader.cpp
binaryTree/: CMakeLists.txt  binaryTree.h  binaryTreeDef.h  binaryTreeDump.h
binaryTree/include/: binaryTree.h  binaryTreeDef.h  binaryTreeDump.h  consoleParser.h
dumpFolder/: 31.00.2025-16:07:16.html  31.00.2025-16:28:25.html
front-end/: CMakeLists.txt  grammar.txt  keywords.def  main.cpp
front-end/AST/include/: AST.h  DSL.h  nameTable.h
front-end/AST/src/: AST.cpp  nameTable.cpp
front-end/include/: RDP.h  astDump.h  bufferExtensions.h  core.h  keywords.def  lexer.h  parser.h  treeSaver.h
front-end/src/: RDP.cpp  astDump.cpp  core.cpp  lexer.cpp  main.cpp  parser.cpp  treeSaver.cpp
nameTable/: 18.04.2025-07:28:32.nameTable
tests/: factorial.cpp  factorial.prison  test.cpp  test.prison
tree/: 22.04.2025-01:33:22.AST  22.04.2025-01:33:22.nameTable
